--- a/templates/default/wrapper.conf.erb
+++ b/templates/default/wrapper.conf.erb
@@ -9,29 +9,21 @@ wrapper.java.additional.2=-Dmule.base="%MULE_HOME%"
 wrapper.java.additional.2.stripquotes=TRUE
 
 # Sets IPv4 addresses in order to avoid multicasting issues
-wrapper.java.additional.3=-Djava.net.preferIPv4Stack=TRUE
 
 # Needed to avoid a memory leak on mvel (see MULE-7650)
-wrapper.java.additional.4=-Dmvel2.disable.jit=TRUE
 
 # Limit HTTP module send and receive buffers size to 1MB by default to avoid running out of Direct Memory.  To optimize for
 # performance this system property should be removed and direct memory increased as required.
-wrapper.java.additional.5=-Dorg.glassfish.grizzly.nio.transport.TCPNIOTransport.max-receive-buffer-size=1048576
-wrapper.java.additional.6=-Dorg.glassfish.grizzly.nio.transport.TCPNIOTransport.max-send-buffer-size=1048576
 
 # Increase Permanent Generation Size from default of 64m
 # Increase this value if you get "Java.lang.OutOfMemoryError: PermGen space error"
 # This property is not used when running java 8 and may cause a warning.
-wrapper.java.additional.7=-XX:PermSize=<%= @perm_size %>
-wrapper.java.additional.8=-XX:MaxPermSize=<%= @max_perm_size %>
 
 # GC settings
-wrapper.java.additional.9=-XX:+HeapDumpOnOutOfMemoryError
-wrapper.java.additional.10=-XX:+AlwaysPreTouch
-wrapper.java.additional.11=-XX:+UseParNewGC
-wrapper.java.additional.12=-XX:NewSize=<%= @new_size %>
-wrapper.java.additional.13=-XX:MaxNewSize=<%= @max_new_size %>
-wrapper.java.additional.14=-XX:MaxTenuringThreshold=8
+
+<% @wrapper_additional.each_with_index do |argument, index| -%>
+<%= "wrapper.java.additional.#{index+3}=#{argument}" %>
+<% end -%>
 
 # *** IMPORTANT ***
 # If you enable any of the options below, you _must_ change the <n> to be a
@@ -67,7 +59,7 @@ wrapper.java.additional.14=-XX:MaxTenuringThreshold=8
 # wrapper.java.additional.<n>=-Danypoint.platform.proxy_password=XXXXXXXX
 #
 # Default Analytics URL, you can provide your own modifying this property
-wrapper.java.additional.17=-Danypoint.platform.analytics_base_uri=https://analytics-ingest.anypoint.mulesoft.com
+# wrapper.java.additional.17=-Danypoint.platform.analytics_base_uri=https://analytics-ingest.anypoint.mulesoft.com
 #
 # Analytics is enabled by default, you can disable it by changing this property
 # wrapper.java.additional.<n>=-Danypoint.platform.analytics_enabled=true
